fastcarto/fastdb/include/fastdb_payload.h

typedef struct fdb_payload_v1_blob fdb_payload_v1_blob_t;
typedef struct fdb_payload_v1_error fdb_payload_v1_error_t;
FDB_PAYLOAD_API uint32_t fdb_payload_v1_abi_version(void);
FDB_PAYLOAD_API void fdb_payload_v1_blob_release(fdb_payload_v1_blob_t* blob);
/* Returned bytes are borrowed while the caller owns the handle. */
FDB_PAYLOAD_API const uint8_t* fdb_payload_v1_blob_data(
    const fdb_payload_v1_blob_t* blob);
FDB_PAYLOAD_API uint64_t fdb_payload_v1_blob_size(
    const fdb_payload_v1_blob_t* blob);
FDB_PAYLOAD_API void fdb_payload_v1_error_release(
    fdb_payload_v1_error_t* error);
/* A null handle returns zero. */
FDB_PAYLOAD_API uint32_t fdb_payload_v1_error_code(
    const fdb_payload_v1_error_t* error);
/*
 * Output locations may be null. Present outputs receive null and zero for a
 * null handle. Returned bytes are borrowed until the next release to zero.
 */
FDB_PAYLOAD_API void fdb_payload_v1_error_symbol(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);
FDB_PAYLOAD_API void fdb_payload_v1_error_path(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);
FDB_PAYLOAD_API void fdb_payload_v1_error_message(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);
FDB_PAYLOAD_API void fdb_payload_v1_error_details_json(
    const fdb_payload_v1_error_t* error,
    const uint8_t** out_data,
    uint64_t* out_size);