python/fastdb4py/payload/_ffi.py


    library.fdb_payload_v1_blob_release.argtypes = [Handle]
    library.fdb_payload_v1_blob_release.restype = None
    library.fdb_payload_v1_blob_data.argtypes = [Handle]
    library.fdb_payload_v1_blob_data.restype = BytePointer
    library.fdb_payload_v1_blob_size.argtypes = [Handle]
    library.fdb_payload_v1_blob_size.restype = ctypes.c_uint64

    library.fdb_payload_v1_error_release.argtypes = [Handle]
    library.fdb_payload_v1_error_release.restype = None
    library.fdb_payload_v1_error_code.argtypes = [Handle]
    library.fdb_payload_v1_error_code.restype = ctypes.c_uint32
    for name in (
        "fdb_payload_v1_error_symbol",
        "fdb_payload_v1_error_path",
        "fdb_payload_v1_error_message",
        "fdb_payload_v1_error_details_json",
    ):
        function = getattr(library, name)
        function.argtypes = [
            Handle,
            BytePointerPointer,
            ctypes.POINTER(ctypes.c_uint64),
        ]
        function.restype = None


_LOADED: Optional[ctypes.CDLL] = None


def library() -> ctypes.CDLL:
    global _LOADED
    if _LOADED is None:
        loaded = ctypes.CDLL(str(_library_path()))
        _declare(loaded)
        actual_abi = int(loaded.fdb_payload_v1_abi_version())
        if actual_abi != ABI_VERSION:
            raise ImportError(
                "fastdb4py.payload requires FastDB payload ABI "
                f"{ABI_VERSION}, but the packaged library reports {actual_abi}"
            )
        _LOADED = loaded
    return _LOADED
